--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=springboot_user_manager
+
+# web???? ??8080
+server.port=8083
+# ?????????????????springboot_user_manager
+spring.datasource.url=jdbc:mysql://localhost:3306/springboot_user_manager?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=123456
+# ?????
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
