--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,10 @@ spring.datasource.username=root
 spring.datasource.password=123456
 # ?????
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# ??sql??
+spring.jpa.show-sql=true
+# ???sql??
+spring.jpa.properties.hibernate.format_sql=true
+# ??????????
+spring.jpa.hibernate.ddl-auto=update
